2A/05_Projet_GL/src/test/deca/syntax/valid/HelloWorld/11_print_guillemet_double_protected.deca
// Description:
//    Programme avec guillemet double protégé
// Resultats:
//    helloo world! "je suis !
//
// Historique:
//    cree le 20/12/2023


{
    print("helloo world! \" je suis !");
}